# smc_cpp_modules

./: .gitignore  CMakeLists.txt  README.md
Linux64/: ExampleCpp.smcm  LlamaCpp.smcm
Linux64/for_centos/: ExampleCpp.smcm
WIN64/: ExampleCpp.smcm  LlamaCpp.smcm
builds/for_centos/: ExampleCpp.smcm
builds/for_debian_10/: ExampleCpp.smcm
builds/for_debian_11_12/: ExampleCpp.smcm
builds/for_ubuntu/: ExampleCpp.smcm
example/: CMakeLists.txt  CMakeLists_external.txt  Test.cpp  Test.h  properties.xml  properties_linux.xml  properties_linux_debian.xml  properties_linux_ubuntu.xml
llamaCpp/: CMakeLists.txt  Main.cpp  Main.h  properties.xml  properties_linux.xml
llamaCpp/lib/win64/: ggml-base.exp  ggml-base.ilk  ggml-base.lib  ggml-cpu.exp  ggml-cpu.ilk  ggml-cpu.lib  ggml.exp  ggml.ilk  ggml.lib  llama.exp  llama.lib
llamaCpp/lib/win64_vulkan/: ggml-base.exp  ggml-base.lib  ggml-cpu.lib  ggml-vulkan.exp  ggml-vulkan.lib  llama.exp  llama.lib
