cmake_minimum_required(VERSION 3.12)
project(smcmodules)

set(CMAKE_CXX_STANDARD 17)
#set(BUILD_ARCH "-m64")
#set(CMAKE_SHARED_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
#set_property(GLOBAL PROPERTY PREFIX "")

include_directories("../SMCModuleDefinitionProvider") # contain SMC c++ provider
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if ($ENV{_WIN64})
    message("arch:" "_WIN64")
    link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/cmake-build-release-visual-studio-64/ModuleLoaderProviderWIN64.lib)
elseif ($ENV{_WIN32})
    message("arch:" "_WIN32")
    link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/cmake-build-release-visual-studio-32/ModuleLoaderProviderWIN32.lib)
elseif ($ENV{_LINUX32})
    message("arch:" "_LINUX32")
    set(CMAKE_CXX_FLAGS "-m32")
    #    set(CMAKE_CXX_FLAGS "-m32 -fpic")
    if ($ENV{_LINUX_DEBIAN})
        link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/Linux32/ModuleLoaderProviderLINUX_DEBIAN32.so)
    elseif ($ENV{_LINUX_UBUNTU})
        link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/Linux32/ModuleLoaderProviderLINUX_UBUNTU32.so)
    else ()
        link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/Linux32/ModuleLoaderProviderLINUX32.so)
    endif ()
elseif ($ENV{_LINUX64})
    message("arch:" "_LINUX64")
    if ($ENV{_LINUX_DEBIAN})
        link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/Linux64/ModuleLoaderProviderLINUX_DEBIAN64.so)
    elseif ($ENV{_LINUX_UBUNTU})
        link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/Linux64/ModuleLoaderProviderLINUX_UBUNTU64.so)
    else ()
        link_libraries(${CMAKE_CURRENT_SOURCE_DIR}/../SMCModuleDefinitionProvider/Linux64/ModuleLoaderProviderLINUX64.so)
    endif ()
endif ()

add_subdirectory(example)

